Git-ignoring some dirs

--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,13 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+
+
+#############
+## My Ignore
+#############
+
+composer.lock
+composer.phar
+vendor/
+nbproject/
